fixes labels so they're not too long and starts to dynamically change inner slice colors

--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,10 @@ body {
   fill: orange;
 }
 
-.innerLabels {
+.labels {
   fill: white;
   pointer-events: none;
+  font-size: 1em;
 }
 
 p {
